# C-_GameOfLife

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile  main_page.dox
include/: GameOfLife.h  ScreenPrinter.h
include/Cell_Culture/: Cell.h  Population.h
include/GoL_Rules/: RuleFactory.h  RuleOfExistence.h  RuleOfExistence_Conway.h  RuleOfExistence_Erik.h  RuleOfExistence_VonNeumann.h
include/Support/: FileLoader.h  Globals.h  MainArguments.h  MainArgumentsParser.h  SupportStructures.h
src/: ScreenPrinter.cpp
src/Cell_Culture/: Cell.cpp  Population.cpp
src/GoL_Rules/: RuleFactory.cpp  RuleOfExistence.cpp  RuleOfExistence_Conway.cpp  RuleOfExistence_Erik.cpp  RulesOfExistence_VonNeumann.cpp
test/: CatchMain.cpp  CellTester.hpp  TestClassRulesOfExistence.hpp  test-Cell.cpp  test-GameOfLife.cpp  test-MainArguments.cpp  test-MainArgumentsParser.cpp  test-Population.cpp  test-RuleFactory.cpp  test-RuleOfExistence_Conway.cpp  test-RuleOfExistence_Erik.cpp  test-RuleOfExistence_VonNeumann.cpp  test-RulesOfExistence.cpp  test-ScreenPrinter.cpp  test-fileLoader.cpp  testTestPoint.cpp
test/TestClasses/: AccessRulesOfExistence.hpp  TestCell.hpp  TestClassRulesOfExistence.hpp  TestPoint.hpp
test/TestHeaders/: AccessRuleOfExistence.h  AccessRulesOfExistence.h  TestFuncitonsCell.h  TestFuncitonsCell.hpp  TestFunctionFileLoader.hpp  TestFunctionsRulesOfExistence.h  TestPoint.h  TestUtil.h  TestUtilCell.h
test/TestSrcFiles/: AccessRuleOfExistence.cpp  AccessRulesOfExistence.cpp  TestClassRulesOfExistence.hpp  TestFuncitonsCell.cpp  TestFuncitonsCell.hpp  TestFuncitonsRuleOfExistence.cpp  TestPoint.cpp  TestUtil.cpp  TestUtilCell.cpp
test/TestUtil/: TestUtil.hpp  TestUtilCell.hpp
